--- a/front-end/src/components/Calendario.module.css
+++ b/front-end/src/components/Calendario.module.css
@@ -1,80 +1,76 @@
-.calendarioContainer {
-    padding: 20px;
-    max-width: 1200px;
-    margin: 0 auto;
-}
-
-.sectionTitle {
-    padding-top: 60px;
-    text-align: center;
-    margin-bottom: 30px;
-    font-size: 2rem;
-    color: #f3c623;
-}
-
-.cardGrid {
-    padding-top: 15px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 20px;
-}
-
-.card {
-    border-radius: 12px;
-    padding: 15px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s, box-shadow 0.2s;
-}
-
-.card:nth-child(odd) {
-    background-color: #0b1d4d;
-    color: #ffffff;
-}
-
-.card:nth-child(even) {
-    background-color: #f3c623;
-    color: #0b1d4d;
-}
-
-.card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-}
-
-.card h3 {
-    margin-bottom: 10px;
-}
-
-.logos {
+.calendarioContainer{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin: 10px 0;
 }
 
-.logos img {
-    width: 50px;
-    height: 50px;
-    object-fit: contain;
+.toSpace {
+  height: 30px; /* Imposta l'altezza desiderata */
 }
 
-.card a {
-    display: inline-block;
-    margin-top: 10px;
-    text-decoration: none;
-    font-weight: bold;
+.no_bottom {
+  margin-bottom: 0 !important;
 }
 
-.card:nth-child(odd) a {
-    color: #f3c623;
+.container {
+  width: 100%;
+  max-width: 1500px;
 }
 
-.card:nth-child(even) a {
-    color: #0b1d4d;
+.meseLabel {
+  margin-top: 50px;
+  margin-bottom: 10px;
 }
 
-.card a:hover {
-    text-decoration: underline;
+@media (max-width: 1500px) {
+  .container {
+    max-width: 1110px;
+  }
+
+  .meseLabel {
+    margin-top: 40px;
+    margin-bottom: 7px !important;
+  }
+}   
+
+@media (max-width: 1130px) {
+  .container {
+    max-width: 990px;
+  }
+
+  .meseLabel {
+    margin-top: 35px;
+    margin-bottom: 7px !important;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 750px;
+  }
+
+  .meseLabel {
+    margin-top: 30px;
+    margin-bottom: 7px !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 660px;
+  }
+
+  .meseLabel {
+    margin-top: 30px;
+    margin-bottom: 7px !important;
+  }
+
+  .partitaContainer {
+    margin-bottom: 10px !important;
+  }
+}
+
+@media (max-width: 680px) {
+  .container {
+    max-width: 600px;
+  }
 }
